--- a/src/components/contact_buttons/contactbtn.module.css
+++ b/src/components/contact_buttons/contactbtn.module.css
@@ -5,5 +5,20 @@ width: 50%;
 }
 
 .img_container>img{
-    width: 40px;
+    width: 55px;
+    filter: invert(25%) sepia(18%) saturate(20%) hue-rotate(27deg) brightness(92%) contrast(89%);
+}
+
+@media (max-width: 992px)  {
+    
+    .img_container>img{
+        width: 50px;
+        filter: invert(98%) sepia(91%) saturate(2%) hue-rotate(67deg) brightness(110%) contrast(100%);
+    }
+}
+@media (max-width: 767px) {
+    
+.img_container>img{
+    width: 35px;
+}
 }
