--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
 
 body {
   margin: 0;
+  font-family: 'Roboto Mono', monospace;
 }
 
 /**
@@ -62,7 +63,7 @@ hr {
  */
 
 pre {
-  font-family: monospace, monospace; /* 1 */
+  font-family: 'Roboto Mono', monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -105,7 +106,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
+  font-family: 'Roboto Mono', monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
