--- a/src/components/button/buttonsStyles.module.css
+++ b/src/components/button/buttonsStyles.module.css
@@ -59,3 +59,31 @@ button:hover{
 .purpleButton:hover::before{ 
     box-shadow: 6px -6px 0px #A958FF;
 }
+
+
+
+
+
+
+@media (max-width: 992px)  {
+    button, button::before{
+        width: 415px;
+        height: 90px;      
+        font-size: 1.5rem;
+    }
+    .shadow{
+        margin: 1.5rem;
+    }
+    
+}
+@media (max-width: 767px) {
+    button, button::before{
+        width: 215px;
+        height: 50px;      
+        font-size: 1rem;
+    }
+    .shadow{
+        margin: 1rem;
+    }
+    
+}
